tests/rosetta/out/Go/brownian-tree.error
parse: error[P999]: tests/rosetta/x/Mochi/brownian-tree.mochi:4:8: unexpected token ":"
  --> tests/rosetta/x/Mochi/brownian-tree.mochi:4:8

  4 | const w: int = 400
    |        ^

help:
  Parse error occurred. Check syntax near this location.